--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<div class="social">
 					<ul>
 						<li class="social">
-							<a class="media" href="https://www.linkedin.com/in/emanoel-sousa" target="_blank"><img src="img/linkedin.png"></a>
+							<a class="media" href="https://www.linkedin.com/in/emanoel-sousa" target="_blank"><img src="EmanoelPequeno.github.io/img/linkedin.png"></a>
 						</li>
 						<li class="social">
 							<a class="media" href="https://github.com/EmanoelPequeno/" target="_blank"><img src="img/github.png"></a>
