--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
 			Olá, mundo!
 		</h1>
 		<div class="img">
-			<img src="Img/profilepic.png" Width="200" height="200">
+			<img src="/img/profilepic.png" Width="200" height="200">
 		</div>
 		<div class="subtitlebg">
 			<p class="subtitle typing_animation">&ltBem-vindo ao meu primeiro site.&#47&gt</p> 
@@ -61,16 +61,16 @@
 				<div class="social">
 					<ul>
 						<li class="social">
-							<a class="media" href="https://www.linkedin.com/in/emanoel-sousa" target="_blank"><img src="Img/linkedin.png"></a>
+							<a class="media" href="https://www.linkedin.com/in/emanoel-sousa" target="_blank"><img src="/img/linkedin.png"></a>
 						</li>
 						<li class="social">
-							<a class="media" href="https://github.com/EmanoelPequeno/" target="_blank"><img src="Img/github.png"></a>
+							<a class="media" href="https://github.com/EmanoelPequeno/" target="_blank"><img src="/img/github.png"></a>
 						</li>
 						<li class="social">
-							<a class="media" href="https://www.behance.net/emanoeldesignair" target="_blank"><img src="Img/Behance (2).png"></a>
+							<a class="media" href="https://www.behance.net/emanoeldesignair" target="_blank"><img src="/img/Behance (2).png"></a>
 						</li>
 						<li class="social">
-							<a class="media" href="https://www.instagram.com/emanoel_pequeno" target="_blank"><img src="Img/instagram1.png"></a>
+							<a class="media" href="https://www.instagram.com/emanoel_pequeno" target="_blank"><img src="/img/instagram1.png"></a>
 						</li>	
 					</ul>
 				</div>
